main/default/objects/Change_Log__c/Change_Log__c.object-meta.xml
<CustomObject>
    <label>Change Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>