main/default/objects/Change_Log__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Midterm Cancellation</fullName>
            </value>
            <value>
                <fullName>Flat Cancellation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Full Amendment</fullName>
            </value>
            <value>
                <fullName>Coverage Amendment</fullName>
            </value>
            <value>
                <fullName>Insured Account Update</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Full Cancel &amp; Replace</fullName>
            </value>
            <value>
                <fullName>Coverage Cancel &amp; Replace</fullName>
            </value>
            <value>
                <fullName>Policy Duration Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>