main/default/objects/Change_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>